fix: change stream api