@@ -1,6 +1,5 @@
 package ru.itmo.monsters.mapper;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Component;
@@ -8,11 +7,7 @@ import ru.itmo.monsters.dto.CityDTO;
 import ru.itmo.monsters.model.CityEntity;
 import ru.itmo.monsters.model.ElectricBalloonEntity;
 import ru.itmo.monsters.service.ElectricBalloonService;
-import ru.itmo.monsters.service.MonsterService;
 
-import java.util.stream.Collectors;
-
-//@RequiredArgsConstructor
 @Component
 public class CityMapper {
 
@@ -27,7 +22,7 @@ public class CityMapper {
         return CityDTO.builder()
                 .id(cityEntity.getId())
                 .name(cityEntity.getName())
-                .balloonsIds(cityEntity.getBalloons().stream().map(ElectricBalloonEntity::getId).collect(Collectors.toList()))
+                .balloonsIds(cityEntity.getBalloons().stream().map(ElectricBalloonEntity::getId).toList())
                 .build();
     }
 
@@ -35,7 +30,7 @@ public class CityMapper {
         return CityEntity.builder()
                 .id(cityDTO.getId())
                 .name(cityDTO.getName())
-                .balloons(cityDTO.getBalloonsIds().stream().map(electricBalloonService::findById).collect(Collectors.toList()))
+                .balloons(cityDTO.getBalloonsIds().stream().map(electricBalloonService::findById).toList())
                 .build();
     }
 }
